Fix icon of MultiAutoComplete when it stretches among multiple lines

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/MultiAutoComplete/multiAutoComplete.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/MultiAutoComplete/multiAutoComplete.scss
@@ -29,9 +29,9 @@ $multiAutoCompleteDisabledBackgroundColor: $wildSand;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: calc(100% - 10px);
+        align-self: stretch;
         flex: 0 0 32px;
-        margin-right: 10px;
+        margin: 5px 10px 5px 0;
         font-size: 16px;
         color: $multiAutoCompleteIconColor;
         border-right: 1px solid $multiAutoCompleteBorderColor;
